# xgovuk-flask-admin

./: .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  DEVELOPERS.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  tox.ini  vite.config.js
.github/workflows/: publish.yml  tests.yml
example/: app.py  enums.py  models.py  views.py
example/templates/: custom_view.html
src/assets/: main.js  main.scss
src/xgov_flask_admin/: __init__.py  widgets.py
src/xgovuk_flask_admin/: __init__.py  assets.py  fields.py  filters.py  pagination.py  theme.py  utils.py  widgets.py
tests/: factories.py
tests/e2e/: conftest.py  test_array_filtering.py  test_array_forms.py  test_bulk_actions_ui.py  test_datetime_forms.py  test_filtering_ui.py  test_forms.py  test_progressive_enhancement.py  test_select_with_search.py  test_select_with_search_filter.py
tests/integration/: conftest.py  test_array_filters.py  test_bulk_actions.py  test_checkbox_widget.py  test_converter.py  test_create_view.py  test_custom_endpoint.py  test_date_filter.py  test_datetime_filters.py  test_datetime_forms.py  test_datetime_widget.py  test_delete_view.py  test_details_view.py  test_edit_view.py  test_export.py  test_filters.py  test_list_view.py  test_model_view.py  test_pagination.py  test_relationships.py  test_search.py  test_select_with_search_chain.py  test_select_with_search_filter.py  test_select_with_search_integration.py  test_sorting.py  test_transaction_isolation.py
tests/unit/: test_filter_converter.py  test_pagination_builder.py  test_select_with_search_filter.py  test_select_with_search_widget.py  test_theme.py  (+1 more)
(+20 files in other folders)
